--- a/src/main/webapp/WEB-INF/views/home/login.html
+++ b/src/main/webapp/WEB-INF/views/home/login.html
@@ -50,9 +50,9 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="login-registration-field">
                         <h2 class="cart-area-title">Register</h2>
-                        <form>
+                        <form action="" th:action="@{/home/create}" th:method="post" th:object="${user}">
                             <label>User Name *</label>
-                            <input type="text" placeholder="Name" />
+                            <input type="text" placeholder="Name" th:field="*{username}"/>
                             <label>Email address *</label>
                             <input type="text" placeholder="E-mail" />
                             <label>Password *</label>
