--- a/src/main/webapp/WEB-INF/views/layout/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout/layout.html
@@ -76,8 +76,9 @@
                                 <ul class="header-cart-area">
                                     <li>
                                         <div class="cart-area">
-                                            <a th:href="@{/#}"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>2</span></a>
+                                            <a th:href="@{/home/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>2</span></a>
                                             <ul>
+<!--                                                render cart item -->
                                                 <li>
                                                     <div class="cart-single-product">
                                                         <div class="media">
